[gd_scene load_steps=7 format=3 uid="uid://jvc34qam0obx"]

[ext_resource type="Shader" path="res://Characters/Player/White.gdshader" id="1"]
[ext_resource type="Script" path="res://Weapons/Weapon.gd" id="2"]
[ext_resource type="Script" path="res://Weapons/WeaponHitbox.gd" id="3"]
[ext_resource type="AudioStream" uid="uid://cpi8xdb0i2rbv" path="res://Audio/Sounds/446013__slavicmagic__metal_bash1.wav" id="4_lganj"]

[sub_resource type="ShaderMaterial" id="1"]
resource_local_to_scene = true
shader = ExtResource("1")
shader_parameter/active = false

[sub_resource type="ParticleProcessMaterial" id="2"]
spread = 180.0
initial_velocity_min = 20.0
initial_velocity_max = 40.0
angular_velocity_min = 10.0
angular_velocity_max = 40.0
gravity = Vector3(0, 0, 0)
turbulence_enabled = true

[node name="Weapon" type="Node2D"]
texture_filter = 1
script = ExtResource("2")

[node name="Node2D" type="Node2D" parent="."]
rotation = -1.5708

[node name="Sprite2D" type="Sprite2D" parent="Node2D"]
material = SubResource("1")
rotation = -0.785398
offset = Vector2(5, -4)

[node name="Hitbox" type="Area2D" parent="Node2D/Sprite2D"]
collision_layer = 0
collision_mask = 174
script = ExtResource("3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Sprite2D/Hitbox"]
position = Vector2(5.65685, -4.24264)
rotation = 0.785398
disabled = true

[node name="ChargeParticles" type="GPUParticles2D" parent="Node2D/Sprite2D"]
emitting = false
amount = 15
process_material = SubResource("2")
lifetime = 0.6

[node name="PlayerDetector" type="Area2D" parent="Node2D/Sprite2D"]
rotation = 2.3562
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Sprite2D/PlayerDetector"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CoolDownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DestroyWeaponSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_lganj")
bus = &"Sounds"

[connection signal="body_entered" from="Node2D/Sprite2D/PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
